crates/scorecard/tests/trybuild/bdd_feature_level_skipped_red_without_detail_must_fail.stderr
error[E0061]: this function takes 7 arguments but 6 arguments were supplied
  --> tests/trybuild/bdd_feature_level_skipped_red_without_detail_must_fail.rs:14:16
   |
14 |       let _row = Row::bdd_feature_level_skipped_red(
   |  ________________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
15 | |         common,
16 | |         40,
17 | |         15,
...  |
20 | |         "15 / 40".to_string(),
21 | |     );
   | |_____- argument #7 of type `String` is missing
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn bdd_feature_level_skipped_red(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: provide the argument
   |
14 |     let _row = Row::bdd_feature_level_skipped_red(
...
20 |         "15 / 40".to_string(),
21 ~         /* String */,
22 ~     );
   |
